# gdk-graphics

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  animated__model_8h_source.html  annotated.html  attribute__data_8h_source.html  batch__model_8h_source.html  batch__modeler_8h_source.html  bounded__pool_8h_source.html  camera_8h_source.html  classattribute__data__view-members.html  classattribute__data__view.html  classes.html  classgdk_1_1_simple_g_l_f_w_window-members.html  classgdk_1_1_simple_g_l_f_w_window.html  classgdk_1_1_window-members.html  classgdk_1_1_window.html  classgdk_1_1animated__model-members.html  classgdk_1_1animated__model.html  classgdk_1_1attribute__data-members.html  classgdk_1_1attribute__data.html  classgdk_1_1batch__model-members.html  classgdk_1_1batch__model.html  classgdk_1_1batch__modeler-members.html  classgdk_1_1batch__modeler.html  classgdk_1_1camera-members.html  classgdk_1_1camera.html  classgdk_1_1entity-members.html  classgdk_1_1entity.html  classgdk_1_1entity__owner-members.html  classgdk_1_1entity__owner.html  classgdk_1_1glfw__window-members.html  classgdk_1_1glfw__window.html  classgdk_1_1graphics_1_1context-members.html  classgdk_1_1graphics_1_1context.html  (+312 more)
demo/: CMakeLists.txt  main.cpp  main.cpp_minimum_freetype_rendering  main_directly_use_impl.cpp
demo/adhoc/: CMakeLists.txt  main.cpp
demo/simple_text/: CMakeLists.txt  main.cpp  text_modeler.cpp  text_modeler.h  text_renderer.cpp  text_renderer.h
demo/skeleton/: CMakeLists.txt  animated_model.h  main.cpp  skeleton_model.cpp  skeleton_model.h
demo/sprite/: CMakeLists.txt  main.cpp
demo/translucency/: CMakeLists.txt  main.cpp
demo/voxel/: CMakeLists.txt  main.cpp  main_lighting.cpp  volume_block_model.h  volume_block_model.txt  voxel_modeler.h  voxel_modeler.txt
docs/: CMakeLists.txt
impl/opengl/common/include/gdk/: glh.h
impl/opengl/common/src/: glh.cpp
impl/opengl/webgl1es2/include/gdk/: color.h  webgl1es2_camera.h  webgl1es2_context.h  webgl1es2_entity.h  webgl1es2_material.h  webgl1es2_model.h  webgl1es2_scene.h  webgl1es2_screen_camera.h  webgl1es2_shader_program.h  webgl1es2_texture.h  webgl1es2_texture_camera.h  webgl1es2_vertex_attribute.h  webgl1es2_vertex_format.h
impl/opengl/webgl1es2/src/: webgl1es2_camera.cpp  webgl1es2_context.cpp  webgl1es2_entity.cpp  webgl1es2_material.cpp  webgl1es2_model.cpp  webgl1es2_scene.cpp  webgl1es2_screen_camera.cpp  webgl1es2_shader_program.cpp  webgl1es2_texture.cpp  webgl1es2_texture_camera.cpp  webgl1es2_vertex_attribute.cpp  webgl1es2_vertex_format.cpp
include/gdk/: attribute_data.h  camera.h  color.h  context.h  entity.h  entity_owner.h  float_uniform_collection.h  game_loop.h  graphics_constraints.h  graphics_context.h  graphics_exception.h  graphics_types.h  image_data.h  mat4x4_uniform_collection.h  mat4x4uniformcollection.h  material.h  model.h  model_data.h  perspective_camera.h  scene.h  screen_camera.h  shader_program.h  shaderprogram.h  texture.h  texture_camera.h  texture_data.h  texture_uniform_collection.h  textureuniformcollection.h  uniform_collection.h  uniform_manager.h  uniformcollection.h  vector2_uniform_collection.h  vector2uniformcollection.h  vector3_uniform_collection.h  vector3uniformcollection.h  vector4_uniform_collection.h  vector4uniformcollection.h  vertex_attribute.h  vertex_data.h  vertex_data_view.h  (+5 more)
include/gdk/ext/: batch_model.h  batch_modeler.h  sprite_animation.h  vertex_batch.h  volumetric_lighting.h
include/jfc/: contiguous_view.h  cube_array.h  event.h  smart_event.h  to_array.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  (+52 more)
src/: attribute_data.cpp  camera.cpp  color.cpp  context.cpp  entity.cpp  float_uniform_collection.cpp  floatuniformcollection.cpp  glh.cpp  graphics_context.cpp  image_data.cpp  mat4x4_uniform_collection.cpp  mat4x4uniformcollection.cpp  material.cpp  model.cpp  model_data.cpp  perspective_camera.cpp  scene.cpp  shader_program.cpp  shaderprogram.cpp  texture.cpp  texture_data.cpp  texture_uniform_collection.cpp  uniform_manager.cpp  vector2_uniform_collection.cpp  vector2uniformcollection.cpp  vector3_uniform_collection.cpp  vector3uniformcollection.cpp  vector4_uniform_collection.cpp  vector4uniformcollection.cpp  vertex_attribute.cpp  vertex_data.cpp  vertex_data_view.cpp  vertex_format.cpp  vertexdata.cpp  vertexformat.cpp  window.cpp
src/ext/: batch_model.cpp  batch_modeler.cpp  sprite_animation.cpp  vertex_batch.cpp
src/include/gdk/: glh.h
test/: CMakeLists.txt  camera_test.cpp  color_test.cpp  context_test.cpp  entity_test.cpp  float_uniform_collection_test.cpp  floatuniformcollection_test.cpp  material_test.cpp  model_test.cpp  scene_test.cpp  shader_program_test.cpp  shaderprogram_test.cpp  test_include.h  texture_test.cpp  uniform_manager_test.cpp  vertex_attribute_test.cpp  vertex_data_test.cpp  vertex_format_test.cpp  vertexattribute_test.cpp  vertexdata_test.cpp  vertexformat_test.cpp  window_test.cpp
tool/: gles2_function_list  scan_opengl_coverage.sh
workspace/: web.sh
